# nutripae-tests

./: .env  .gitignore  README.md  debug_test.py  generate_test_report.py  nutripae_tests.py  pyproject.toml  pytest.ini  run_tests_with_report.py  selectors_debug.json  test_metadata_registry.json
tests/: __init__.py  config.py  conftest.py  test_metadata.py
tests/auth/: __init__.py  auth-test.py  test_auth.py  test_auth_controller.py  test_authorization_controller.py  test_invitation_management_controller.py  test_parametric_data_controller.py  test_permission_management_controller.py  test_role_management_controller.py  test_user_management_controller.py
tests/cobertura/: conftest.py  test_beneficiaries.py  test_campuses.py  test_coverages.py  test_departments.py  test_institutions.py  test_parametrics.py  test_towns.py
tests/cobertura - ui/: main.py
tests/cobertura - ui/test_logout/: main.py
tests/cobertura - ui/utils/: chrome_preferences.py  (+2 more)
tests/cobertura-ui/: test_beneficiaries.py  test_campuses.py  test_coverages.py  test_departments.py  test_institutions.py  test_towns.py
tests/cobertura-ui_new/: config.py
tests/compras/: config.py  conftest.py  pytest.ini  test_application_health_api.py  test_data_validation_business_logic.py  test_inventory_api.py  test_inventory_movements_api.py  test_providers_api.py
tests/menus/: config.py  conftest.py  pytest.ini  test_application_health_api.py  test_data_validation_business_logic.py  test_dishes_api.py  test_ingredients_api.py  test_menu_cycles_api.py
tests/rh/: conftest.py  openapi.json  test_availabilities.py  test_employees.py  test_parametrics.py
tests/ui/: config.py
utils/: __init__.py  pdf_generator.py  pdf_styles.py  pdf_tables.py  test_metadata_extractor.py  test_runner.py
(+55 files in other folders)
