[project]
name = "nutripae-tests"
version = "0.1.0"
description = ""
authors = [
    {name = "srestrero",email = "srestreporo@unal.edu.co"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.6.1,<3.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "reportlab (>=4.0.0,<5.0.0)",
    "pytest-json-report (>=1.5.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
